--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,6 +1,6 @@
 /* Navbar Genel Stil */
 .navbar {
-    background-color: #ff7f50; /* Turuncu ton */
+    background-color: #c62828; /* Turuncu ton */
     color: white;
     padding: 15px 20px;
     display: flex;
