--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -79,7 +79,7 @@
   .profile-avatar {
     width: 100px;
     height: 100px;
-    border: 4px solid red;  /* Kırmızı çerçeve */
+    border: 4px solid #EB5A3C;  /* Kırmızı çerçeve */
     border-radius: 50%;  /* Yuvarlak çerçeve */
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Hafif gölge efekti */
   }
