Ana sayfa tasarımı geliştirildi

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,7 +37,7 @@ a:hover {
 }
 
 .MuiButton-root:hover {
-  background-color: #DF9755 !important; /* Koyu kırmızı hover efekti */
+  background-color: #f97316 !important; /* Koyu kırmızı hover efekti */
 }
 
 /* Kart Stilleri */
