image size değişikliği

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
 /* Genel Sayfa Stilleri */
 body {
   margin: 0;
-  font-family: "Noto Sans", sans-serif !important;
+  font-family: "Rubik", sans-serif !important;
   background-color: #ffffff; /* Beyaz arka plan */
   color: #4a4a4a; /* Granit gri yazı rengi (şimdi siyah olacak) */
 }
