--- a/frontend/src/pages/DishDetailPage.css
+++ b/frontend/src/pages/DishDetailPage.css
@@ -17,7 +17,7 @@
     color: #2c3e50 !important;
   }
   
-  .dish-image {
+  .dish-image-detail {
     width: 100%;
     height: 550px;
     object-fit: cover;
