--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -78,5 +78,5 @@ h1, h2, h3, h4, h5, h6 {
 /* Genel Yazı Stili */
 p, .MuiTypography-root {
   color: #4a4a4a !important; /* Yazılar için granit gri siyah renk */
-  font-family: "Noto Sans", sans-serif !important;
+  font-family: "Rubik", sans-serif !important;
 }
