--- a/frontend/src/pages/MyLikes.css
+++ b/frontend/src/pages/MyLikes.css
@@ -50,7 +50,7 @@
   z-index: 3;
 }
 .page-title {
-  font-family: "Noto Sans", sans-serif !important; /* Fontu Noto Sans yap */
+  font-family: "Rubik", sans-serif !important; /* Fontu Noto Sans yap */
   text-align: center; /* Ortala */
   font-weight: bold; /* Kalın yap */
   margin: 20px 0; /* Üst-alt boşluk ekle */
