--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -1,11 +1,11 @@
 /* Container ayarları */
 .login-container {
+  min-height: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #f4f4f9; /* Hafif gri tonlu pastel arka plan */
-  padding-bottom: 50px;
+
 }
 
 /* Formun dış kutusu */
@@ -29,6 +29,9 @@
   max-width: 400px; /* Formun genişliğini sınırladık */
 }
 
+.form{
+  padding: 0;
+}
 /* Başlık rengi ve font */
 h5 {
   color: #333333; /* Daha koyu ve şık bir renk */
@@ -42,8 +45,8 @@ h5 {
 .input-field .MuiInputBase-root {
   font-size: 16px;
   border-radius: 8px; /* Yumuşak kenarlar */
-  padding: 12px;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
+  padding: 0 !important;
 }
 
 /* Giriş yap butonunun stil ayarları */
@@ -88,5 +91,39 @@ h5 {
 .button-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+/* Login için dış wrapper */
+.login-wrapper {
+  position: relative;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+/* Arka plan katmanı */
+.login-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../assets/CookifyBackground.png");
+  background-repeat: repeat;
+  background-size: contain;
+  opacity: 0.6; /* burada 0.2, 0.5 yapabilirsin */
+  z-index: 0;
+}
+
+/* İçerik katmanı */
+.login-container {
+  position: relative;
+  z-index: 1;
+  min-height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
