--- a/frontend/src/pages/Register.css
+++ b/frontend/src/pages/Register.css
@@ -4,8 +4,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background-color: #f4f4f9; /* Hafif gri pastel arka plan */
+    min-height: 80%;
+    
+
   }
   
   /* Form Box */
@@ -34,8 +35,8 @@
   .input-field .MuiInputBase-root {
     font-size: 16px;
     border-radius: 8px; /* Yuvarlak köşe */
-    padding: 12px;
-    margin-bottom: 16px;
+    padding: 0 !important;
+    margin-bottom: 8px;
   }
   
   /* Kayıt Ol Butonu */
@@ -54,7 +55,7 @@
   
   /* Giriş Yap Butonu */
   .login-btn {
-    margin-top: 20px;
+    margin-top: 20px !important;
     padding: 12px;
     border: 2px solid #ff7043;
     background-color: transparent;
@@ -75,3 +76,38 @@
     color: #e57373; /* Kırmızı tonları */
     font-size: 14px;
   }
+
+  /* Wrapper dış katman */
+.register-wrapper {
+  position: relative;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+/* Arka plan katmanı */
+.register-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../assets/CookifyBackground.png");
+  background-repeat: repeat;
+  background-size: contain;
+  opacity: 0.5; /* İstediğin solukluk derecesi */
+  z-index: 0;
+}
+
+/* İçerik katmanı */
+.register-container {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 80%;
+}
